Add regular expression

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           name="email"
           id="email"
           autofocus
+          pattern="[^@ \t\r\n]+@[^@ \t\r\n]+\.[^@ \t\r\n]+"
         />
       </label>
       <label
