--- a/index.html
+++ b/index.html
@@ -10,27 +10,28 @@
     <form class="form" action="./Textfile.txt" method="GET">
       <h2>Registration</h2>
 
-      <label
-        >Type your name:
-        <input type="text"
-        placeholder="name"
+      <label>Type your name:
+        <span class="required"></span>
+        <input
+        type="text"
+        placeholder="John Johnson"
         name="name"
         autofocus />
       </label>
 
-      <label
-        >Type your email:
+      <label>Type your email:
+        <span class="required"></span>
         <input
           type="email"
-          placeholder="email"
+          placeholder="grandjohn50@gmail.com"
           name="email"
           autofocus
           pattern="[^@ \t\r\n]+@[^@ \t\r\n]+\.[^@ \t\r\n]+"
         />
       </label>
 
-      <label
-        >Type your password:
+      <label>Type your password:
+        <span class="required"></span>
         <input
           type="text"
           placeholder="BE STRONG"
@@ -39,8 +40,8 @@
         />
       </label>
 
-      <label
-        >Type your phone number:
+      <label>Type your phone number:
+        <span class="required"></span>
         <input
           type="tel"
           placeholder="phone number"
@@ -49,24 +50,65 @@
         />
       </label>
 
+      <div class="field"><fieldset>
+        <legend>Your city:</legend>
+        <input type="text" name="city" list="city-list">
+
+        <datalist id="city-list">
+            <option value="Kyiv">Kyiv</option>
+            <option value="Dnipro">Dnipro</option>
+            <option value="Lviv">Lviv</option>
+            <option value="Kharkiv">Kharkiv</option>
+            <option value="Odesa">Odesa</option>
+        </datalist>
+
+    </fieldset></div>
+
       <label
         >Type your address:
         <input
           type="text"
-          placeholder="city, street, house etc."
+          placeholder="street, house etc."
           name="address"
         />
       </label>
 
-      <label
-        >Type your date of birthday:
+      <label>Type your date of birthday:
+        <span class="required"></span>
         <input
           type="date"
           placeholder="date"
           name="date"
           pattern="(?:(?:31(\/|-|\.)(?:0?[13578]|1[02]))\1|(?:(?:29|30)(\/|-|\.)(?:0?[13-9]|1[0-2])\2))(?:(?:1[6-9]|[2-9]\d)?\d{2})$|^(?:29(\/|-|\.)0?2\3(?:(?:(?:1[6-9]|[2-9]\d)?(?:0[48]|[2468][048]|[13579][26])|(?:(?:16|[2468][048]|[3579][26])00))))$|^(?:0?[1-9]|1\d|2[0-8])(\/|-|\.)(?:(?:0?[1-9])|(?:1[0-2]))\4(?:(?:1[6-9]|[2-9]\d)?\d{2})"
         />
+      </label>
+
+      <label>Your card number:
+        <span class="required"></span>
+        <input
+          type="number"
+          placeholder="1234 5678 9012 3456"
+          name="card"
+          pattern="(^4[0-9]{12}(?:[0-9]{3})?$)|(^(?:5[1-5][0-9]{2}|222[1-9]|22[3-9][0-9]|2[3-6][0-9]{2}|27[01][0-9]|2720)[0-9]{12}$)|(3[47][0-9]{13})|(^3(?:0[0-5]|[68][0-9])[0-9]{11}$)|(^6(?:011|5[0-9]{2})[0-9]{12}$)|(^(?:2131|1800|35\d{3})\d{11}$)"
+        />
     </label>
+
+      <label>Attach your passport scan
+        <span class="required"></span>
+        <input
+          type="file"
+          name="attached file"
+        />
+      </label>
+
+      <div class="checkbox">
+        <label>
+          <input
+          type="checkbox"
+          name="X"
+        />
+          Subscribe for $50 per month donation</label>
+      </div>
 
       <button type="submit">Register</button>
       <button type="reset">Reset</button>
